k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yubi-backend
spec:
  selector:
    matchLabels:
      app: yubi-backend
  template:
    metadata:
      labels:
        app: yubi-backend
    spec:
      containers:
      - name: backend
        image: localhost/yubi-backend:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: yubi-backend
spec:
  selector:
    app: yubi-backend
  ports:
  - port: 8080
    targetPort: 8080
