k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yubi-frontend
spec:
  selector:
    matchLabels:
      app: yubi-frontend
  template:
    metadata:
      labels:
        app: yubi-frontend
    spec:
      containers:
      - name: frontend
        image: yubi-frontend:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: yubi-frontend
spec:
  selector:
    app: yubi-frontend
  ports:
  - port: 3000
    targetPort: 3000
